# Robotics_Automation_EE656

./: .gitignore  README.md
Assignment_1/: README.md
Assignment_1/install/: local_setup.sh  setup.ps1  setup.sh
Assignment_1/log/: latest_build
Assignment_1/src/robot_launch/: package.xml
Assignment_1/src/robot_launch/launch/: control_only.launch.py
Assignment_1/src/ros2_manipulation/: package.xml  setup.py
Assignment_1/src/ros2_manipulation/params/: rx200_params.yaml
Assignment_1/src/ros2_manipulation/ros2_manipulation/: rx200_pick_place_client.py  rx200_pick_place_command.py
Assignment_1_lab/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assignment_1_lab/log/: latest_build
Assignment_1_lab/src/robot_bringup/: CMakeLists.txt  package.xml
Assignment_1_lab/src/robot_bringup/launch/: control_only.launch.py
Assignment_1_lab/src/rx200_moveit_control/: package.xml
Assignment_1_lab/src/rx200_moveit_control/install/: local_setup.sh  setup.zsh
Assignment_1_lab/src/rx200_moveit_control/rx200_moveit_control/: rx200_moveit_action_client.py
Assignment_2/: README.md
Assignment_2/src/custom_arm_description/: CMakeLists.txt  package.xml
Assignment_2/src/custom_arm_description/launch/: custom-arm.launch.py
Assignment_2/src/robot_launch/: package.xml
Assignment_2/src/robot_launch/launch/: control_only.launch.py  perception.launch.py
Assignment_2/src/ros2_perception/: package.xml  setup.py
Assignment_2/src/ros2_perception/config/: rx200_pick_place.rviz
Assignment_2/src/ros2_perception/params/: rx200_params.yaml
Assignment_2/src/ros2_perception/ros2_manipulation/: rx200_pick_place_client.py  rx200_pick_place_perception.py
Assignment_2/src/ros2_perception/ros2_perception/: rx200_pick_place_client.py  rx200_pick_place_perception.py
labSample_sorting/: README.md
labSample_sorting/src/ros2_perception/: setup.cfg
pick_place/: README.md
pick_place/src/ros2_manipulation/: package.xml  setup.cfg
pick_stack/: README.md
pick_stack/src/robot_launch/: CMakeLists.txt
(+19 files in other folders)
