<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_launch</name>
  <version>0.0.1</version>
  <description>Example for a launch package</description>
  <maintainer email="zeenath.ara.s@mumail.ie">Zeenath</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rx200_pick_place</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>realsense2_camera</depend>
  <depend>interbotix_perception_modules</depend>
  <depend>interbotix_xsarm_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
