<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.zeenath.ara@gmail.com">master26</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>

  <depend>interbotix_perception_msgs</depend>
  <depend>interbotix_common_modules</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
